--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   background: top center fixed #3a606e;
+  background-image: url("images/fetti.gif");
+  background-repeat: repeat;
   font-family: Georgia, serif;
   font-size: 15px;
 }
@@ -203,6 +205,21 @@ table {
   border: 4px solid #d4cb92;
 }
 
+#sotwPopup {
+  position: sticky;
+  background-image: url("images/gold.webp");
+  background-repeat: repeat;
+  width: 650px;
+  height: 550px;
+  border: 4px solid #000000;
+}
+
+#popupWords {
+  margin-left: 50px;
+  margin-right: 50px;
+  font-size: large;
+}
+
 form {
   text-align: center;
   font-size: larger;
@@ -264,6 +281,20 @@ b {
   border: 3px solid #d4cb92;
   border-radius: 4px;
   margin: 17px;
+}
+
+#sotwButton {
+  border: 3px solid #d4cb92;
+  border-radius: 4px;
+  margin: 17px;
+  height: 50px;
+  width: 200px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+#sotwButton:hover {
+  background-color: #d4cb92;
 }
 
 #submitButton:hover {
