--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background: top center fixed #3a606e;
-  background-image: url("images/fetti.gif");
+  /* background-image: url("images/fetti.gif"); */
   background-repeat: repeat;
   font-family: Georgia, serif;
   font-size: 15px;
